--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 		<h1 class="label">Admin Login</h1>
-		<form class="login_form" action="dashboard.html" method="post" name="form" onsubmit="return validated()">
+		<form class="login_form" action="playerlist.html" method="post" name="form" onsubmit="return validated()">
 
 			<div class="font">Username</div>
 			<input type="text" name="username" id="username" required>
